<?xml version="1.0"?>
<package>
  <name>gps_kml_extractor</name>
  <version>1.0.0</version>
  <description>This package extracts GPS data into KML format for data analysis using software such as Google Earth.</description>
  <url>https://github.com/tmxkn1/gps_kml_extractor</url>
  <author email="anthony.jiang.github@outlook.com">Zhengyi Jiang</author>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
